[gd_scene load_steps=20 format=2]

[ext_resource path="res://entities/Vending Machine/Drinks/Vending_Machine_Option.gd" type="Script" id=1]
[ext_resource path="res://resources/models/Vending Machine/PriceTag.obj" type="ArrayMesh" id=2]
[ext_resource path="res://resources/models/Bottles/Metal Large.glb" type="PackedScene" id=3]
[ext_resource path="res://resources/models/Vending Machine/Can_Large.obj" type="ArrayMesh" id=4]
[ext_resource path="res://resources/models/Bottles/Plastic Large 03.glb" type="PackedScene" id=5]
[ext_resource path="res://resources/models/Vending Machine/Button.obj" type="ArrayMesh" id=6]
[ext_resource path="res://resources/models/Vending Machine/Drink_Mat.tres" type="Material" id=7]
[ext_resource path="res://resources/models/Bottles/Plastic Large 06.glb" type="PackedScene" id=8]
[ext_resource path="res://resources/models/Bottles/Plastic Large 01.glb" type="PackedScene" id=9]
[ext_resource path="res://resources/models/Bottles/Plastic Small.glb" type="PackedScene" id=10]
[ext_resource path="res://resources/models/Bottles/Metal Medium.glb" type="PackedScene" id=11]
[ext_resource path="res://resources/models/Bottles/Metal Screw Medium.glb" type="PackedScene" id=12]
[ext_resource path="res://resources/models/Bottles/Plastic Large 04.glb" type="PackedScene" id=13]
[ext_resource path="res://resources/models/Bottles/Plastic Medium.glb" type="PackedScene" id=14]
[ext_resource path="res://resources/models/Bottles/Metal Small.glb" type="PackedScene" id=15]
[ext_resource path="res://resources/models/Bottles/Metal Screw Small.glb" type="PackedScene" id=16]
[ext_resource path="res://resources/models/Bottles/Plastic Large 02.glb" type="PackedScene" id=17]
[ext_resource path="res://resources/models/Bottles/Plastic Large 05.glb" type="PackedScene" id=18]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.08, 0.04, 0.01 )

[node name="Vending_Machine_Option" type="Spatial"]
transform = Transform( 0.122362, 0, 0, 0, 0.122362, 0, 0, 0, 0.122362, -0.9, 2.293, 0.592 )
script = ExtResource( 1 )
drinkTypes = [ ExtResource( 3 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 16 ), ExtResource( 15 ), ExtResource( 9 ), ExtResource( 17 ), ExtResource( 5 ), ExtResource( 13 ), ExtResource( 18 ), ExtResource( 8 ), ExtResource( 14 ), ExtResource( 10 ) ]

[node name="DrinkAnchor" type="Spatial" parent="."]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, 0, -1, 0.3 )

[node name="Drink" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
visible = false
mesh = ExtResource( 4 )
material/0 = ExtResource( 7 )

[node name="PriceTag" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.35, 1.35 )
mesh = ExtResource( 2 )
material/0 = ExtResource( 7 )

[node name="Button" type="MeshInstance" parent="."]
transform = Transform( 8.17247, 0, 0, 0, 8.17247, 0, 0, 0, 8.17247, 0, -2.2, 1.55 )
mesh = ExtResource( 6 )
material/0 = null

[node name="ButtonBody" type="StaticBody" parent="Button"]

[node name="CollisionShape" type="CollisionShape" parent="Button/ButtonBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.0194184 )
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[connection signal="input_event" from="Button/ButtonBody" to="." method="_on_ButtonBody_input_event"]
[connection signal="mouse_entered" from="Button/ButtonBody" to="." method="_on_ButtonBody_mouse_entered"]
[connection signal="mouse_exited" from="Button/ButtonBody" to="." method="_on_ButtonBody_mouse_exited"]
